Hide all section exsept one

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="css/styles.css" rel="stylesheet" />
   </head>
   <body>
-    <header class="header">
+    <!--<header class="header">
       <div class="container header-container">
         <nav class="header-navigation">
           <a href="./index.html" class="header-logo">
@@ -52,23 +52,23 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header>-->
 
     <main>
       <!--Hero image-->
-      <section class="hero">
+      <!--<section class="hero">
         <div class="container hero-container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button type="button" class="hero-button" data-modal-open>
             Order Service
           </button>
         </div>
-      </section>
+      </section>-->
       <!--/Hero image-->
 
       <!--Advantages-->
 
-      <section class="advantages">
+      <!--<section class="advantages">
         <div class="container advantages-container">
           <h2 class="visually-hidden">Principes</h2>
           <ul class="advantages-items list">
@@ -129,11 +129,11 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section>-->
       <!--/Advantages-->
 
       <!--article-->
-      <section class="article">
+      <!--<section class="article">
         <div class="container article-container">
           <h2 class="article-title">What are we doing</h2>
           <ul class="article-list list">
@@ -166,7 +166,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section>-->
       <!--/article-->
 
       <!--Team-->
@@ -387,7 +387,7 @@
       <!--/Team-->
 
       <!----Customers--->
-      <section class="customers-container">
+      <!--<section class="customers-container">
         <div class="container">
           <h2 class="customer-title">Customers</h2>
           <ul class="customer-list list">
@@ -435,11 +435,11 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section>-->
       <!----/Customers----->
     </main>
 
-    <footer class="footer">
+    <!--<footer class="footer">
       <div class="container footer-container">
         <div class="footer-logo-block">
           <a href="./index.html" class="footer-logo">
@@ -507,7 +507,8 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer>-->
+
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close-btn" data-modal-close>
