--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
     <link href="css/styles.css" rel="stylesheet" />
+    <link href="css/tablet.css" rel="stylesheet" />
+    <link href="css/desktop.css" rel="stylesheet" />
   </head>
   <body>
     <!--<header class="header">
