--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       <!--/Advantages-->
 
       <!--article-->
-      <!--<section class="article">
+      <section class="article">
         <div class="container article-container">
           <h2 class="article-title">What are we doing</h2>
           <ul class="article-list list">
@@ -168,7 +168,7 @@
             </li>
           </ul>
         </div>
-      </section>-->
+      </section>
       <!--/article-->
 
       <!--Team-->
