--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
 
       <!--Advantages-->
 
-      <!--<section class="advantages">
+      <section class="advantages">
         <div class="container advantages-container">
           <h2 class="visually-hidden">Principes</h2>
-          <ul class="advantages-items list">
-            <li>
+          <ul class="advantages-list list">
+            <li class="advantages-item">
               <div class="advantages-box">
                 <svg class="advantages-icon" width="64px" height="64px">
                   <use
@@ -82,14 +82,13 @@
                   ></use>
                 </svg>
               </div>
-
               <h3 class="advantages-title">Strategy</h3>
               <p class="advantages-text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="advantages-item">
               <div class="advantages-box">
                 <svg class="advantages-icon" width="64px" height="64px">
                   <use href="./images/symbol-defs.advan..svg#icon-clock"></use>
@@ -101,7 +100,7 @@
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="advantages-item">
               <div class="advantages-box">
                 <svg class="advantages-icon" width="64px" height="64px">
                   <use
@@ -115,7 +114,7 @@
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="advantages-item">
               <div class="advantages-box">
                 <svg class="advantages-icon" width="64px" height="64px">
                   <use
@@ -131,7 +130,7 @@
             </li>
           </ul>
         </div>
-      </section>-->
+      </section>
       <!--/Advantages-->
 
       <!--article-->
