--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
     <link href="./css/styles.css" rel="stylesheet" />
+    <link href="./css/mobile.css" rel="stylesheet" />
     <link href="./css/tablet.css" rel="stylesheet" />
     <link href="./css/desktop.css" rel="stylesheet" />
   </head>
@@ -178,7 +179,7 @@
             <li class="team-item">
               <img
                 class="team-card"
-                src="./images/m1.jpg"
+                src="./images/m1-1x.jpg"
                 alt="Mark Guerrero"
                 width="264"
                 height="260"
@@ -231,7 +232,7 @@
             <li class="team-item">
               <img
                 class="team-img"
-                src="./images/m2.jpg"
+                src="./images/m2-1x.jpg"
                 alt="Tom Ford"
                 width="264"
                 height="260"
@@ -283,7 +284,7 @@
             <li class="team-item">
               <img
                 class="team-img"
-                src="./images/m3.jpg"
+                src="./images/m3-1x.jpg"
                 alt="Camila Garcia"
                 width="264"
                 height="260"
@@ -335,7 +336,7 @@
             <li class="team-item">
               <img
                 class="team-img"
-                src="./images/m4.jpg"
+                src="./images/m4-1x.jpg"
                 alt="Daniel Wilson"
                 width="264"
               />
@@ -388,7 +389,7 @@
       <!--/Team-->
 
       <!----Customers--->
-      <!--<section class="customers-container">
+      <section class="customers-container">
         <div class="container">
           <h2 class="customer-title">Customers</h2>
           <ul class="customer-list list">
@@ -436,7 +437,7 @@
             </li>
           </ul>
         </div>
-      </section>-->
+      </section>
       <!----/Customers----->
     </main>
 
