--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           <ul class="article-list list">
             <li class="article-item">
               <img
-                class="card"
+                srcset="./images/main1-1x.jpg 1x, ./images/main1-2x.jpg 2x"
                 src="./images/main1.jpg"
                 alt="computer monitor screen"
                 width="360"
@@ -150,7 +150,7 @@
             </li>
             <li class="article-item">
               <img
-                class="card"
+                srcset="./images/main2-1x.jpg 1x, ./images/main2-2x.jpg 2x"
                 src="./images/main2.jpg"
                 alt="phone screen"
                 width="360"
@@ -159,7 +159,7 @@
             </li>
             <li class="article-item">
               <img
-                class="card"
+                srcset="./images/main3-1x.jpg 1x, ./images/main3-2x.jpg 2x"
                 src="./images/main3.jpg"
                 alt="phone in hands"
                 width="360"
@@ -179,7 +179,8 @@
             <li class="team-item">
               <img
                 class="team-card"
-                src="./images/m1-1x.jpg"
+                srcset="./images/m1-1x.jpg 1x, ./images/m1-2x.jpg 2x"
+                src="./images/m1.jpg"
                 alt="Mark Guerrero"
                 width="264"
                 height="260"
@@ -232,7 +233,8 @@
             <li class="team-item">
               <img
                 class="team-img"
-                src="./images/m2-1x.jpg"
+                srcset="./images/m2-1x.jpg 1x, ./images/m2-2x.jpg 2x"
+                src="./images/m2.jpg"
                 alt="Tom Ford"
                 width="264"
                 height="260"
@@ -284,7 +286,8 @@
             <li class="team-item">
               <img
                 class="team-img"
-                src="./images/m3-1x.jpg"
+                srcset="./images/m3-1x.jpg 1x, ./images/m3-2x.jpg 2x"
+                src="./images/m3.jpg"
                 alt="Camila Garcia"
                 width="264"
                 height="260"
@@ -336,7 +339,8 @@
             <li class="team-item">
               <img
                 class="team-img"
-                src="./images/m4-1x.jpg"
+                srcset="./images/m4-1x.jpg 1x, ./images/m4-2x.jpg 2x"
+                src="./images/m4.jpg"
                 alt="Daniel Wilson"
                 width="264"
               />
@@ -389,8 +393,8 @@
       <!--/Team-->
 
       <!----Customers--->
-      <section class="customers-container">
-        <div class="container">
+      <section class="customers">
+        <div class="container customers-container">
           <h2 class="customer-title">Customers</h2>
           <ul class="customer-list list">
             <li class="customer-item">
