--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
-    <link href="./css/styles.css" rel="stylesheet" />
-    <link href="./css/mobile.css" rel="stylesheet" />
-    <link href="./css/tablet.css" rel="stylesheet" />
-    <link href="./css/desktop.css" rel="stylesheet" />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/mobile.css" />
+    <link rel="stylesheet" href="./css/tablet.css" />
+    <link rel="stylesheet" href="./css/desktop.css" />
   </head>
   <body>
-    <!--<header class="header">
+    <header class="header">
       <div class="container header-container">
         <nav class="header-navigation">
           <a href="./index.html" class="header-logo">
@@ -39,34 +39,35 @@
             </li>
           </ul>
         </nav>
-
-        <address class="header-address">
-          <ul class="header-list list">
-            <li class="adress-link">
-              <a href="mailto:info@devstudio.com" class="header-mailto link"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="adress-link">
-              <a href="tel:+110001111111" class="header-tel link"
-                >+11 (000) 111-11-11</a
-              >
-            </li>
-          </ul>
-        </address>
+        <div class="contact-address">
+          <address class="header-address">
+            <ul class="address-list list">
+              <li class="adress-link">
+                <a href="mailto:info@devstudio.com" class="header-mailto link"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="adress-link">
+                <a href="tel:+110001111111" class="header-tel link"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
       </div>
-    </header>-->
+    </header>
 
     <main>
       <!--Hero image-->
-      <!--<section class="hero">
+      <section class="hero">
         <div class="container hero-container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button type="button" class="hero-button" data-modal-open>
             Order Service
           </button>
         </div>
-      </section>-->
+      </section>
       <!--/Hero image-->
 
       <!--Advantages-->
@@ -173,7 +174,7 @@
 
       <!--Team-->
       <section class="team">
-        <div class="container">
+        <div class="container team-container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list list">
             <li class="team-item">
