--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
             <li class="mobile-social-item">
               <a href="" class="mobile-link">
                 <svg class="mob-social-icon" width="24" height="24">
-                  <use href="../images/symbol-defs.svg.svg#icon-facebook"></use>
+                  <use href="./images/symbol-defs.svg.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
